# chatinfobot

./: .gitignore  Pipfile  README.md  bot_commands.py  config.py  main.py  pyproject.toml
adapters/: orm.py  repository.py
domain/: model.py
helpers/: graph_helpers.py
service_layer/: msg_handler.py  plotting.py
service_layer/commands_handlers/: broadcast.py  info.py  infogroup.py  plot.py
service_layer/message_handlers/: msg_handler.py
